// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`kyc-webhook 404 / 409 response shape locks 404 Not Found — unknown sub-route forwards to problemJson notFoundHandler 1`] = `
{
  "detail": "The requested resource GET /api/kyc/no-such-hook was not found.",
  "instance": "/api/kyc/no-such-hook",
  "status": 404,
  "title": "Not Found",
  "type": "https://liquifact.com/probs/not-found",
}
`;

exports[`kyc-webhook POST /api/kyc/webhook — error response body snapshots 200 OK — happy path (locks the success response shape) valid signed payload is persisted 1`] = `
{
  "smeId": "sme-001",
  "status": "verified",
  "success": true,
}
`;

exports[`kyc-webhook POST /api/kyc/webhook — error response body snapshots 400 Bad Request invalid JSON payload (route wraps the SyntaxError as a stable message) 1`] = `
{
  "code": "invalid_payload",
  "detail": "Invalid JSON payload",
  "instance": "/api/kyc/webhook",
  "retry_hint": "",
  "retryable": false,
  "status": 400,
  "title": "Bad Request",
  "type": "https://liquifact.com/probs/bad-request",
}
`;

exports[`kyc-webhook POST /api/kyc/webhook — error response body snapshots 400 Bad Request missing or invalid smeId 1`] = `
{
  "code": "missing_sme_id",
  "detail": "Missing or invalid smeId",
  "instance": "/api/kyc/webhook",
  "retry_hint": "",
  "retryable": false,
  "status": 400,
  "title": "Bad Request",
  "type": "https://liquifact.com/probs/bad-request",
}
`;

exports[`kyc-webhook POST /api/kyc/webhook — error response body snapshots 400 Bad Request missing or invalid status 1`] = `
{
  "code": "missing_status",
  "detail": "Missing or invalid status",
  "instance": "/api/kyc/webhook",
  "retry_hint": "",
  "retryable": false,
  "status": 400,
  "title": "Bad Request",
  "type": "https://liquifact.com/probs/bad-request",
}
`;

exports[`kyc-webhook POST /api/kyc/webhook — error response body snapshots 400 Bad Request missing tenant context when payload carries tenantId 1`] = `
{
  "code": "missing_tenant_context",
  "detail": "Missing tenant context.",
  "instance": "/api/kyc/webhook",
  "retry_hint": "",
  "retryable": false,
  "status": 400,
  "title": "Bad Request",
  "type": "https://liquifact.com/probs/bad-request",
}
`;

exports[`kyc-webhook POST /api/kyc/webhook — error response body snapshots 400 Bad Request unknown provider status — fail-closed (#592) 1`] = `
{
  "code": "unknown_status",
  "detail": "Unknown provider status: mystery_status",
  "instance": "/api/kyc/webhook",
  "retry_hint": "",
  "retryable": false,
  "status": 400,
  "title": "Bad Request",
  "type": "https://liquifact.com/probs/bad-request",
}
`;

exports[`kyc-webhook POST /api/kyc/webhook — error response body snapshots 401 Unauthorized invalid webhook signature 1`] = `
{
  "code": "invalid_signature",
  "detail": "Invalid webhook signature",
  "instance": "/api/kyc/webhook",
  "retry_hint": "",
  "retryable": false,
  "status": 401,
  "title": "Unauthorized",
  "type": "https://liquifact.com/probs/unauthorized",
}
`;

exports[`kyc-webhook POST /api/kyc/webhook — error response body snapshots 401 Unauthorized missing X-Signature header 1`] = `
{
  "code": "missing_signature",
  "detail": "Missing X-Signature header",
  "instance": "/api/kyc/webhook",
  "retry_hint": "",
  "retryable": false,
  "status": 401,
  "title": "Unauthorized",
  "type": "https://liquifact.com/probs/unauthorized",
}
`;

exports[`kyc-webhook POST /api/kyc/webhook — error response body snapshots 403 Forbidden tenant scope mismatch 1`] = `
{
  "code": "tenant_mismatch",
  "detail": "Tenant scope mismatch.",
  "instance": "/api/kyc/webhook",
  "retry_hint": "",
  "retryable": false,
  "status": 403,
  "title": "Forbidden",
  "type": "https://liquifact.com/probs/forbidden",
}
`;

exports[`kyc-webhook POST /api/kyc/webhook — error response body snapshots 500 Internal Server Error persistence_error — persistKycRecord throws 1`] = `
{
  "code": "persistence_error",
  "detail": "Simulated DB write failure",
  "instance": "/api/kyc/webhook",
  "retry_hint": "",
  "retryable": false,
  "status": 500,
  "title": "Internal Server Error",
  "type": "https://liquifact.com/probs/internal-server-error",
}
`;

exports[`kyc-webhook POST /api/kyc/webhook — error response body snapshots 503 Service Unavailable missing_secret — apiSecret not configured 1`] = `
{
  "code": "missing_secret",
  "detail": "KYC webhook ingestion is not configured",
  "instance": "/api/kyc/webhook",
  "retry_hint": "Retry the request in a few moments.",
  "retryable": true,
  "status": 503,
  "title": "Service Unavailable",
  "type": "https://liquifact.com/probs/service-unavailable",
}
`;
